--- a/theme/index.scss
+++ b/theme/index.scss
@@ -2,6 +2,7 @@
 @import './reset.scss';
 @import './components/pagination.scss';
 @import './components/editor.scss';
+@import './playground';
 
 @font-face {
   font-family: 'Roboto';
